--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,6 +28,10 @@
     <footer>
         <h3>this is a footer</h3>
     </footer>
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  var socket = io();
+</script>
 </body>
 
 </html>
