--- a/views/layouts/index.html
+++ b/views/layouts/index.html
@@ -29,7 +29,7 @@
 
   <body>
     <header class="text-center text-white">
-      <h1 class="pt-4">Viva Chat</h1>
+      <h1 class="pt-3">Viva Chat</h1>
 
       <!-- create login or logouit link -->
 
@@ -45,6 +45,14 @@
     </header>
     <div class="jumbotron text-center m-0">
       <!-- {{{ body }}} -->
+      <form id="landing-form align-middle">
+        <button class="btn-lg btn-primary mr-5" id="landing-login">
+          Login
+        </button>
+        <button class="btn-lg btn-primary ml-5" id="landing-create">
+          Create Account
+        </button>
+      </form>
     </div>
     <footer class="bg-dark text-center text-white">
       <!-- Grid container -->
