--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,4 +1,8 @@
 <form id="landing-form">
-  <button class="btn btn-primary" id="landing-login">Login</button>
-  <button class="btn btn-primary" id="landing-create">Create Account</button>
+  <button class="btn-lg btn-primary mr-5" id="landing-login">
+    Login
+  </button>
+  <button class="btn-lg btn-primary ml-5" id="landing-create">
+    Create Account
+  </button>
 </form>
