--- a/views/layouts/index.html
+++ b/views/layouts/index.html
@@ -45,14 +45,41 @@
     </header>
     <div class="jumbotron text-center m-0">
       <!-- {{{ body }}} -->
-      <form id="landing-form align-middle">
-        <button class="btn-lg btn-primary mr-5" id="landing-login">
-          Login
-        </button>
-        <button class="btn-lg btn-primary ml-5" id="landing-create">
-          Create Account
-        </button>
-      </form>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            ChatText
+            <div class="chatBox">
+              <div class="card" style="width: 18rem">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+
+                  <a href="#" class="card-link">Card link</a>
+                  <a href="#" class="card-link">Another link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-8">
+            2 of 2 ChatText
+            <div class="person1">
+              <div class="card" style="width: 18rem">
+                <div class="card-body">
+                  <h6 class="card-subtitle mb-2 text-muted">Person 1</h6>
+                </div>
+              </div>
+            </div>
+            <div class="person2">
+              <div class="card" style="width: 18rem">
+                <div class="card-body">
+                  <h6 class="card-subtitle mb-2 text-muted">Person2</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <footer class="bg-dark text-center text-white">
       <!-- Grid container -->
