update videochat handlebars

--- a/views/layouts/index.html
+++ b/views/layouts/index.html
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../public/css/hompage.css" />
+    <link rel="stylesheet" href="../../public/css/homepage.css" />
     <title>Viva Chat</title>
   </head>
 
@@ -45,42 +45,6 @@
     </header>
     <div class="jumbotron text-center m-0">
       <!-- {{{ body }}} -->
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="chatBox">
-              <div class="card" style="width: 18rem">
-                <div class="card-body">
-                  <h6 class="card-subtitle mb-2 text-muted">Chat Box</h6>
-                  <a href="#" class="card-link">Card link</a>
-                  <a href="#" class="card-link">Another link</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="col">
-              <div class="person1">
-                <div class="card" style="width: 18rem">
-                  <div class="card-body">
-                    <h6 class="card-subtitle mb-2 text-muted">
-                      Video Person 1
-                    </h6>
-                  </div>
-                </div>
-              </div>
-              <div class="person2">
-                <div class="card" style="width: 18rem">
-                  <div class="card-body">
-                    <h6 class="card-subtitle mb-2 text-muted">Video Person2</h6>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
     <footer class="bg-dark text-center text-white">
       <!-- Grid container -->
