--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -1,32 +1,47 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      ChatText
       <div class="chatBox">
-        <div class="card" style="width: 18rem">
+        <div class="card" style="width: 18rem; height: 30rem">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <h6 class="card-subtitle mb-2 text-muted" style="height: 25rem">
+              Chat Box
+            </h6>
+            <div class="input-group mb-3">
+              <input
+                type="text"
+                class="form-control chatInput"
+                placeholder="Say Something"
+                aria-label="Chat input box"
+                aria-describedby="basic-addon2"
+              />
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button">
+                  Button
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="col-8">
-      2 of 2 ChatText
-      <div class="person1">
-        <div class="card" style="width: 18rem">
-          <div class="card-body">
-            <h6 class="card-subtitle mb-2 text-muted">Person 1</h6>
+    {{! Video people  }}
+    <div class="col">
+      <div class="col">
+        <div class="person1">
+          <div class="card" style="width: 20rem; height: 15rem">
+            <div class="card-body">
+              <h6 class="card-subtitle mb-2 text-muted">
+                Video Person 1
+              </h6>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="person2">
-        <div class="card" style="width: 18rem">
-          <div class="card-body">
-            <h6 class="card-subtitle mb-2 text-muted">Person2</h6>
+        <div class="person2">
+          <div class="card" style="width: 20rem; height: 15rem">
+            <div class="card-body">
+              <h6 class="card-subtitle mb-2 text-muted">Video Person2</h6>
+            </div>
           </div>
         </div>
       </div>
