--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -33,5 +33,5 @@
     </div>
   </div>
 </div>
-
-<script src="./js/login.js"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script src="./js/videochat.js"></script>
