--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,8 +1,10 @@
-<form id="landing-form">
-  <button class="btn-lg btn-primary mr-5" id="landing-login">
-    Login
-  </button>
-  <button class="btn-lg btn-primary ml-5" id="landing-create">
-    Create Account
-  </button>
-</form>
+<div class="jumbotron text-center m-0">
+  <form id="landing-form">
+    <button class="btn-lg btn-primary mr-5" id="landing-login">
+      Login
+    </button>
+    <button class="btn-lg btn-primary ml-5" id="landing-create">
+      Create Account
+    </button>
+  </form>
+</div>
