added peer for making video connections between users

--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -30,7 +30,7 @@
       <div class="col">
         <div class="person1">
           <div class="card" style="width: 20rem; height: 15rem">
-            <div class="card-body">
+                        <div id="videoOne" class="card-body"></div>
               <h6 class="card-subtitle mb-2 text-muted">
                 Video Person 1
               </h6>
@@ -39,7 +39,8 @@
         </div>
         <div class="person2">
           <div class="card" style="width: 20rem; height: 15rem">
-            <div class="card-body">
+                        <div id="videoTwo" class="card-body"></div>
+
               <h6 class="card-subtitle mb-2 text-muted">Video Person2</h6>
             </div>
           </div>
@@ -48,6 +49,7 @@
     </div>
   </div>
 </div>
+              <div id="grid"></div>
 <script src="https://unpkg.com/peerjs@1.4.5/dist/peerjs.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="./js/videochat.js"></script>
