--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -18,4 +18,17 @@ footer {
   height: 10vh;
 }
 
+#grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 300px);
+  grid-auto-rows: 300px;
+}
+
+video{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-color: red;
+}
+
 
