landing page buttons clickable, css linked handlebars

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,10 +1,8 @@
 <div class="jumbotron text-center m-0">
-  <form id="landing-form">
-    <button class="btn-lg btn-primary mr-5" id="landing-login">
-      Login
-    </button>
-    <button class="btn-lg btn-primary ml-5" id="landing-create">
-      Create Account
-    </button>
-  </form>
+  <div class="row">
+    
+    <a class="btn-lg btn-primary"href="/login">Login</a>
+
+    <a class="btn-lg btn-primary"href="/create-account">Create Account</a>
+  </div>
 </div>
