--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -71,6 +71,8 @@
         </section>
       </div>
     </footer>
+    <button class="no-button" id="logout">logout</button>
   </body>
+  <script src="/js/logout.js"></script>
 
 </html>
