--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,8 +1,8 @@
-<div class="jumbotron text-center m-0">
-  <div class="row">
+<div class=" text-center m-0">
+  <div class="row justify-content-space-between ">
     
-    <a class="btn-lg btn-primary"href="/login">Login</a>
+    <a class=" col-2 btn-lg btn-primary"href="/login">Login</a>
 
-    <a class="btn-lg btn-primary"href="/create-account">Create Account</a>
+    <a class="col-2 btn-lg btn-primary"href="/create-account">Create Account</a>
   </div>
 </div>
