--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -1,69 +1,85 @@
-  <style>
-    #video-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, 300px);
-      grid-auto-rows: 300px;
-    }
-    
-    video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  </style>
+<style>
+  #video-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 300px);
+    grid-auto-rows: 300px;
+  }
+
+  video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  #form {
+    background: rgba(0, 0, 0, 0.15);
+    padding: 0.25rem;
+    display: flex;
+    height: 3rem;
+    box-sizing: border-box;
+    backdrop-filter: blur(10px);
+  }
+
+  #input {
+    border: none;
+    padding: 0 1rem;
+    flex-grow: 1;
+    border-radius: 2rem;
+    margin: 0.25rem;
+  }
+
+  #input:focus {
+    outline: none;
+  }
+
+  #form>button {
+    background: #333;
+    border: none;
+    padding: 0 1rem;
+    margin: 0.25rem;
+    border-radius: 3px;
+    outline: none;
+    color: #fff;
+  }
+
+  #messages {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  #messages>li {
+    padding: 0.5rem 1rem;
+  }
+
+  #messages>li:nth-child(odd) {
+    background: #efefef;
+  }
+</style>
 
 <div class="container">
   <div class="row">
     <div class="col">
       <div class="chatBox">
-        <div class="card" style="width: 18rem; height: 30rem">
-          <div class="card-body">
+        <div class="card" style="width: 22rem; height: 30rem">
+          <div class="card-body ">
             <h6 class="card-subtitle mb-2 text-muted" style="height: 25rem">
               Chat Box
             </h6>
-            <div class="input-group mb-3">
-              <input
-                type="text"
-                class="form-control chatInput"
-                placeholder="Say Something"
-                aria-label="Chat input box"
-                aria-describedby="basic-addon2"
-              />
-              <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">
-                  Button
-                </button>
-              </div>
-            </div>
+            <ul id="messages"></ul>
+            <form id="form" action="">
+              <input id="input" autocomplete="off" /><button>Send</button>
+            </form>
           </div>
         </div>
       </div>
     </div>
-    {{! Video people  }}
     <div class="col">
-      {{!-- <div class="col">
-        <div class="person1">
-          <div class="card" style="width: 20rem; height: 15rem">
-            <div id="videoOne" class="card-body"></div>
-            <h6 class="card-subtitle mb-2 text-muted">
-              Video Person 1
-            </h6>
-          </div>
-        </div>
-        <div class="person2">
-          <div class="card" style="width: 20rem; height: 15rem">
-            <div id="videoTwo" class="card-body"></div>
-
-            <h6 class="card-subtitle mb-2 text-muted">Video Person2</h6>
-          </div>
-        </div>
-      </div> --}}
-
-    <section id="video-grid"></section>
-
+      <section id="video-grid"></section>
     </div>
   </div>
 </div>
+
 {{!-- <div id="grid"></div> --}}
 <script src="https://unpkg.com/peerjs@1.4.5/dist/peerjs.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
