landing page layout

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,8 +1,14 @@
-<div class=" text-center m-0">
-  <div class="row justify-content-space-between ">
-    
-    <a class=" col-2 btn-lg btn-primary"href="/login">Login</a>
+<div class="jumbotron row justify-content-center m-0">
 
-    <a class="col-2 btn-lg btn-primary"href="/create-account">Create Account</a>
+  <div class="col-md-6 p-3 mb-5 rounded d-flex flex-column justify-content-center">
+
+    <div class="row justify-content-center">
+      <a class="btn-lg col-3 btn-primary m-1" href="/login">Login</a>
+    </div>
+    <div class="row justify-content-center">
+      <a class="btn-lg col-3 btn-primary" href="/create-account">Create Account</a>
+    </div>
   </div>
+
+</div>
 </div>
