--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,9 +47,9 @@
         {{/if}}
       </nav> -->
     </header>
-    <div class="jumbotron text-center m-0">
+    <main class="text-center m-0">
      {{{ body }}}
-    </div>
+    </main>
     <footer class="bg-dark text-center text-white">
       <!-- Grid container -->
       <div class="container pt-4">
@@ -93,9 +93,6 @@
             role="button"
             ><i class="fab fa-github"></i
           ></a>
-        </section>
-        <section>
-          
         </section>
       </div>
     </footer>
