--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,22 +1,31 @@
 <div class="jumbotron text-center m-0">
-  <div class="row justify-content-center pt-3">
-    <div class="col-md-6 shadow-lg p-3 mb-5 rounded">
-      <h2>Login</h2>
-      <form class="form login-form">
-        <div class="form-group">
-          <label for="email-login">email:</label>
-          <input class="form-input" type="text" id="email-login" />
+      <div class="row justify-content-center pt-3">
+        <div class="col-md-6 shadow-lg p-3 mb-5 rounded">
+
+          <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+              <h2 class="text-dark">Login</h2>
+              <form class="form login-form">
+                <div class="form-group text-dark">
+                  <label for="email-login">email:</label>
+                  <input class="form-input" type="text" id="email-login" />
+                </div>
+                <div class="form-group text-dark">
+                  <label for="password-login">password:</label>
+                  <input class="form-input" type="password" id="password-login" />
+                </div>
+                <div class="form-group login-button-formEl">
+                  <button class="btn btn-primary" type="submit">Login</button>
+                </div>
+              </form>
+  
+            </div>
+            <div class="col-md-4"></div>
+
+          </div>
+
         </div>
-        <div class="form-group">
-          <label for="password-login">password:</label>
-          <input class="form-input" type="password" id="password-login" />
-        </div>
-        <div class="form-group">
-          <button class="btn btn-primary" type="submit">login</button>
-        </div>
-      </form>
+      </div>
     </div>
-  </div>
-</div>
-{{! edit here }}
-<script src="js/login.js"></script>
+    <script src="js/login.js"></script>
