--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,7 +15,7 @@
                   <label for="password-login">password:</label>
                   <input class="form-input" type="password" id="password-login" />
                 </div>
-                <div class="form-group login-button-formEl">
+                <div class="form-group form-button">
                   <button class="btn btn-primary" type="submit">Login</button>
                 </div>
               </form>
