--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,24 +1,32 @@
 <div class="jumbotron text-center m-0">
   <div class="row justify-content-center pt-3">
     <div class="col-md-6 shadow-lg p-3 mb-5 rounded">
-      <h2>Signup</h2>
+      <div class="row">
+
+      <div class="col-4"></div>
+      <div class="col-4">
+      <h2 class="text-dark">Signup</h2>
       <form class="form signup-form">
-        <div class="form-group">
-          <label for="name-signup">name:</label>
+        <div class="form-group text-dark">
+          <label for="name-signup">Name:</label>
           <input class="form-input" type="text" id="name-signup" />
         </div>
-        <div class="form-group">
-          <label for="email-signup">email:</label>
+        <div class="form-group text-dark">
+          <label for="email-signup">Email:</label>
           <input class="form-input" type="text" id="email-signup" />
         </div>
-        <div class="form-group">
-          <label for="password-signup">password:</label>
+        <div class="form-group text-dark">
+          <label for="password-signup">Password:</label>
           <input class="form-input" type="password" id="password-signup" />
         </div>
-        <div class="form-group">
-          <button class="btn btn-primary" type="submit">signup</button>
+        <div class="form-group form-button">
+          <button class="btn btn-primary" type="submit">Signup</button>
         </div>
       </form>
+
+      </div>
+      <div class="col-4"></div>
+      </div>
     </div>
   </div>
 </div>
