cleaner videochat page

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -3,7 +3,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 80vh;
+  min-height: 80vh;
 }
 
 .text-white,
