--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -57,7 +57,7 @@
   }
 </style>
 
-<div class="container">
+<div class="jumbotron mb-0">
   <div class="row">
     <div class="col">
       <div class="chatBox">
