--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -96,6 +96,9 @@
       <section id="video-grid"></section>
     </div>
   </div>
+  <div class="row justify-content-center">
+    <button class="btn btn-primary" type="submit" id="logout-btn">Logout</button>
+  </div>
 </div>
 
 {{!-- <div id="grid"></div> --}}
