left aligned text, changed color and made chat box longer

--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -73,13 +73,18 @@
     padding: 1em;
     margin: 1em;
   }
+
+  li {
+    color: #212529;
+    text-align: left;
+  }
 </style>
 
 <div class="jumbotron mb-0">
   <div class="row">
     <div class="col">
       <div class="chatBox">
-        <div class="card" style="width: 22rem; height: 30rem">
+        <div class="card" style="width: 22rem; height: 50rem">
             <h6 class="card-subtitle mb-2 text-muted chat-box-title" style="height: 1rem">
               Chat Box
             </h6>
