--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -84,12 +84,14 @@
   <div class="row">
     <div class="col">
       <div class="chatBox">
+        <p></p>
         <div class="card" style="width: 22rem; height: 50rem">
             <h6 class="card-subtitle mb-2 text-muted chat-box-title" style="height: 1rem">
               Chat Box
             </h6>
           <div class="card-body" id="card-body">
-            <ul id="messages"></ul>
+            {{!-- setting the data attribute as the username so we can grab this in the DOM --}}
+            <ul data-name="{{username}}" id="messages"></ul>
           </div>
             <form id="form" action="">
               <input id="input" autocomplete="off" /><button>Send</button>
