--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -3,12 +3,15 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, 300px);
     grid-auto-rows: 300px;
+    grid-gap: 1.5rem;
   }
 
   video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    
+    border-radius: 30px;
   }
 
 
