--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,6 +1,9 @@
 <div class="jumbotron text-center m-0">
   <div class="row justify-content-center pt-3">
     <div class="col-md-6 shadow-lg p-3 mb-5 rounded">
+      <p class="text-dark"> Welcome to our video chat application! Please login or make an account to proceed to the
+        main lobby. Once you are in the room, you will need to allow video and microphone access in order to join the
+        videochat. </p>
 
       <div class="row">
         <div class="col-md-4"></div>
