--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -21,7 +21,7 @@
             <div class="form-group form-button">
               <button class="btn btn-primary" type="submit">Login</button>
             </div>
-            <div class="row justify-content-center">
+            <div class="form-group form-button">
               <a class="btn btn-primary" href="/create-account">Create Account</a>
             </div>
           </form>
