--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -64,7 +64,7 @@
           <!-- Github -->
           <a
             class="btn btn-outline-light btn-floating m-1"
-            href="#!"
+            href="https://github.com/brownj47/random-video-chat"
             role="button"
             ><i class="fab fa-github"></i
           ></a>
