--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -65,7 +65,7 @@
           <a
             class="btn btn-outline-light btn-floating m-1"
             href="https://github.com/brownj47/random-video-chat"
-            role="button"
+            role="button" target="_blank"
             ><i class="fab fa-github"></i
           ></a>
           
