--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
 .jumbotron {
-  color: white;
+  background-color: white;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 80vh;
+  min-height: 50vh;
 }
 
 .text-white,
@@ -42,6 +42,7 @@ footer {
   grid-template-columns: repeat(auto-fill, 300px);
   grid-auto-rows: 300px;
   grid-gap: 1.5rem;
+  justify-content: center;
 }
 
 video {
