--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -10,12 +10,18 @@
   </li>
 </ul>
 
-{{!-- <div class="jumbotron mb-0"> --}}
+<div class="jumbotron mb-0">
+
   <div class="row">
+
+    <div class="col-9">
+      <section id="video-grid"></section>
+    </div>
+
     <div class="col">
       <div class="chatBox">
         <p></p>
-        <div class="card" style="width: 22rem; height: 50rem">
+        <div class="card" style="width: 22rem; height: 30rem">
           <h6 class="card-subtitle mb-2 text-muted chat-box-title" style="height: 1rem">
             Chat Box
           </h6>
@@ -29,15 +35,14 @@
         </div>
       </div>
     </div>
-    <div class="col">
-      <section id="video-grid"></section>
-    </div>
+
   </div>
+
   <div class="row justify-content-center">
     <button class="btn btn-primary" type="submit" id="logout-btn">Logout</button>
   </div>
-  {{!--
-</div> --}}
+
+</div>
 
 {{!-- <div id="grid"></div> --}}
 
