--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,10 @@
-.jumbotron {
-  background-color: white;
+/* .jumbotron {
+  background-image: url("../image/image1.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 50vh;
-}
+  height: 100vh;
+} */
 
 .text-white,
 .btn,
@@ -12,23 +12,9 @@
   background-color: blueviolet;
 }
 
-header,
-footer {
-  height: 10vh;
+input {
+  text-align: center;
 }
-
-/* #grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 300px);
-  grid-auto-rows: 300px;
-} */
-
-/* video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  background-color: red;
-} */
 
 .form-group {
   text-align: right;
