--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -1,51 +1,50 @@
-<ul class="nav justify-content-center">
-  <li class="nav-item">
-    <a class="nav-link active" href="http://localhost:3000/room1">Room 1</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="http://localhost:3000/room2">Room 2</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="http://localhost:3000/room3">Room 3</a>
-  </li>
-</ul>
+{{!-- <div class="jumbotron mb-0"> --}}
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link active" href="http://localhost:3000/room1">Room 1</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="http://localhost:3000/room2">Room 2</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="http://localhost:3000/room3">Room 3</a>
+    </li>
+  </ul>
 
-<div class="jumbotron mb-0">
+  <div class="container">
+    <div class="row">
 
-  <div class="row">
+      <div class="col-9">
+        <section id="video-grid"></section>
+      </div>
 
-    <div class="col-9">
-      <section id="video-grid"></section>
-    </div>
-
-    <div class="col">
-      <div class="chatBox">
-        <p></p>
-        <div class="card" style="width: 22rem; height: 30rem">
-          <h6 class="card-subtitle mb-2 text-muted chat-box-title" style="height: 1rem">
-            Chat Box
-          </h6>
-          <div class="card-body" id="card-body">
-            {{!-- setting the data attribute as the username so we can grab this in the DOM --}}
-            <ul data-name="{{username}}" id="messages"></ul>
+      <div class="col">
+        <div class="chatBox">
+          <p></p>
+          <div class="card" style="width: 22rem; height: 30rem">
+            <h6 class="card-subtitle mb-2 text-muted chat-box-title" style="height: 1rem">
+              Chat Box
+            </h6>
+            <div class="card-body" id="card-body">
+              {{!-- setting the data attribute as the username so we can grab this in the DOM --}}
+              <ul data-name="{{username}}" id="messages"></ul>
+            </div>
+            <form id="form" action="">
+              <input id="input" autocomplete="off" /><button>Send</button>
+            </form>
           </div>
-          <form id="form" action="">
-            <input id="input" autocomplete="off" /><button>Send</button>
-          </form>
         </div>
       </div>
     </div>
 
+    <div class="row justify-content-center">
+      <button class="btn btn-primary" type="submit" id="logout-btn">Logout</button>
+    </div>
+
   </div>
 
-  <div class="row justify-content-center">
-    <button class="btn btn-primary" type="submit" id="logout-btn">Logout</button>
-  </div>
+  {{!-- <div id="grid"></div> --}}
 
-</div>
-
-{{!-- <div id="grid"></div> --}}
-
-<script src="https://unpkg.com/peerjs@1.4.5/dist/peerjs.min.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="js/videochat.js"></script>
+  <script src="https://unpkg.com/peerjs@1.4.5/dist/peerjs.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/videochat.js"></script>
