fixed fit to page in login handlebars

--- a/views/room2.handlebars
+++ b/views/room2.handlebars
@@ -1,12 +1,12 @@
 <ul class="nav justify-content-center">
   <li class="nav-item">
-    <a class="nav-link active" href="http://localhost:3000/room1">Room 1</a>
+    <a class="nav-link" href="/videochat">Main Room</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="http://localhost:3000/room2">Room 2</a>
+    <a class="nav-link active" href="/room1">Room 1</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="http://localhost:3000/room3">Room 3</a>
+    <a class="nav-link" href="/room3">Room 3</a>
   </li>
 </ul>
 
