--- a/views/room3.handlebars
+++ b/views/room3.handlebars
@@ -8,6 +8,10 @@
   <li class="nav-item">
     <a class="nav-link" href="/room2">Room 2</a>
   </li>
+      </li>
+        <li class="nav-item">
+      <a class="nav-link" id="random-room" href="">Room Roullete</a>
+    </li>
 </ul>
 
 <div class="jumbotron mb-0">
