--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -9,11 +9,13 @@
     <li class="nav-item">
       <a class="nav-link" href="http://localhost:3000/room3">Room 3</a>
     </li>
+        <li class="nav-item">
+      <a class="nav-link" id="random-room" href="">Random 1 on 1!</a>
+    </li>
   </ul>
 
   <div class="container">
     <div class="row">
-
       <div class="col-9">
         <section id="video-grid"></section>
       </div>
