--- a/views/room1.handlebars
+++ b/views/room1.handlebars
@@ -10,7 +10,7 @@
   </li>
     </li>
         <li class="nav-item">
-      <a class="nav-link" id="random-room" href="">Room Roullete</a>
+      <a class="nav-link" id="random-room" href="">Room Roulette</a>
     </li> 
 </ul>
 
