--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -10,7 +10,7 @@
       <a class="nav-link" href="http://localhost:3000/room3">Room 3</a>
     </li>
         <li class="nav-item">
-      <a class="nav-link" id="random-room" href="">Random 1 on 1!</a>
+      <a class="nav-link" id="random-room" href="">Room Roulette</a>
     </li>
   </ul>
 
