--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,7 +1,7 @@
 {{!-- <div class="jumbotron jumbotron-fluid"> --}}
-  <div class="container mt-5">
+  <div class="container">
     <div class="row justify-content-center pt-3">
-      <div class="col-md-6 shadow-lg p-3 mb-5 rounded">
+      <div class="col-md-6 shadow-lg p-3 mt-5 rounded">
         <p class="text-dark"> Welcome to our video chat application! Please login or make an account to proceed to the
           main lobby. Once you are in the room, you will need to allow video and microphone access in order to join the
           videochat. </p>
@@ -17,11 +17,11 @@
             <input class="form-input" type="password" id="password-login" placeholder="Insert Password" />
           </div>
 
-          <div class="form-group form-button">
-            <button class="btn btn-primary" type="submit">Login</button>
+          <div class="row justify-content-center mb-3">
+            <button class="btn btn-primary btn-sizing" type="submit">Login</button>
           </div>
           <div class="row justify-content-center">
-            <a class="btn btn-primary" href="/create-account">Create Account</a>
+            <a class="btn btn-primary btn-sizing" href="/create-account">Create Account</a>
           </div>
         </form>
       </div>
