--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
-<div class="container mt-5">
+<div class="container">
   <div class="row justify-content-center pt-3">
-    <div class="col-md-6 shadow-lg p-3 mb-5 rounded">
+    <div class="col-md-6 shadow-lg p-3 mt-5 rounded">
 
       <div class="row justify-content-center">
 
@@ -15,11 +15,11 @@
               {{!-- <label for="password-login">password:</label> --}}
               <input class="form-input" type="password" id="password-login" placeholder="Insert Password" />
             </div>
-            <div class="form-group form-button">
-              <button class="btn btn-primary" type="submit">Login</button>
+            <div class="row justify-content-center mb-3">
+              <button class="btn btn-primary btn-sizing" type="submit">Login</button>
             </div>
             <div class="row justify-content-center">
-              <a class="btn btn-primary" href="/create-account">Create Account</a>
+              <a class="btn btn-primary btn-sizing" href="/create-account">Create Account</a>
             </div>
           </form>
         </div>
