--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -18,8 +18,8 @@
               {{!-- <label for="password-signup">Password:</label> --}}
               <input class="form-input" type="password" id="password-signup" placeholder="Insert Your Password" />
             </div>
-            <div class="form-group form-button">
-              <button class="btn btn-primary" type="submit">Signup</button>
+            <div class="form-group form-button row justify-content-center">
+              <button class="btn btn-primary btn-sizing" type="submit">Signup</button>
             </div>
           </form>
         </div>
