--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -1,28 +1,41 @@
-<ul class="nav justify-content-center">
-  <li class="nav-item">
-    <a class="nav-link active" href="http://localhost:3000/room1">Room 1</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="http://localhost:3000/room2">Room 2</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="http://localhost:3000/room3">Room 3</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="random-room" href="">Room Roulette</a>
-  </li>
-</ul>
+<nav class="nav-height">
+  <div class="container-fluid container-height">
+    <div class="row">
+      <div class="col">
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="/room1">Room 1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/room2">Room 2</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/room3">Room 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="random-room" href="roomroulette">Room Roulette</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col">
+        <div class="row justify-content-end">
+          <button class="btn btn-primary btn-height" type="submit" id="logout-btn">Logout</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
 
-<div class="container-fluid">
-  <div class="row no-gutters">
-    <div class="col">
+
+<div class="container-fluid container-height">
+  <div class="row h-100">
+    <div class="col-8">
       <section id="video-grid"></section>
     </div>
-    <div class="col">
+    <div class="col-4">
       <div class="chatBox">
-        <p></p>
         <div class="card" style="width: 22rem; height: 30rem">
-          <h6 class="card-subtitle mb-2 text-muted chat-box-title" style="height: 1rem">
+          <h6 class="card-subtitle text-muted chat-box-title" style="height: 1rem">
             Chat Box
           </h6>
           <div class="card-body" id="card-body">
@@ -36,15 +49,7 @@
       </div>
     </div>
   </div>
-  <div class="row justify-content-center">
-    <button class="btn btn-primary" type="submit" id="logout-btn">Logout</button>
-
-  </div>
 </div>
-
-
-
-{{!-- <div id="grid"></div> --}}
 
 <script src="https://unpkg.com/peerjs@1.4.5/dist/peerjs.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
