--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -2,16 +2,15 @@
   <li class="nav-item">
     <a class="nav-link active" href="/videochat">Main Room</a>
   </li>
+    <li class="nav-item">
+    <a class="nav-link" href="/room1">Room 1</a>
+  </li>
   <li class="nav-item">
     <a class="nav-link" href="/room2">Room 2</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="/room3">Room 3</a>
   </li>
-    </li>
-        <li class="nav-item">
-      <a class="nav-link" id="random-room" href="">Room Roulette</a>
-    </li> 
 </ul>
 
 <div class="jumbotron mb-0">
@@ -31,7 +30,7 @@
           </h6>
           <div class="card-body" id="card-body">
             {{!-- setting the data attribute as the username so we can grab this in the DOM --}}
-            <ul data-name="{{user.username}}" id="messages"></ul>
+            <ul data-name="{{username}}" id="messages"></ul>
           </div>
           <form id="form" action="">
             <input id="input" autocomplete="off" /><button>Send</button>
