--- a/views/room3.handlebars
+++ b/views/room3.handlebars
@@ -13,7 +13,7 @@
             <a class="nav-link" href="/room2">Room 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="random-room" href="/roomroulette">Room Roulette</a>
+            <a class="nav-link" id="random-room" href="/random">Room Roulette</a>
           </li>
         </ul>
       </div>
