--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -13,7 +13,7 @@
             <a class="nav-link" href="/room3">Room 3</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="random-room" href="roomroulette">Room Roulette</a>
+            <a class="nav-link" id="random-room" href="/random">Room Roulette</a>
           </li>
         </ul>
       </div>
@@ -34,7 +34,7 @@
     </div>
     <div class="col-4">
       <div class="chatBox">
-        <div class="card" style="width: 22rem; height: 30rem">
+        <div class="card" style="width: 40vh; height: 60vh">
           <h6 class="card-subtitle text-muted chat-box-title" style="height: 1rem">
             Chat Box
           </h6>
