--- a/views/videochat.handlebars
+++ b/views/videochat.handlebars
@@ -1,7 +1,7 @@
 <nav class="nav-height">
   <div class="container-fluid container-height">
     <div class="row">
-      <div class="col">
+      <div class="col-11">
         <ul class="nav">
           <li class="nav-item">
             <a class="nav-link active" href="/room1">Room 1</a>
