--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,8 +49,8 @@ input {
 
 #video-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 300px);
-  grid-auto-rows: 300px;
+  grid-template-columns: repeat(auto-fill, 32vh);
+  grid-auto-rows: 32vh;
   grid-gap: 1.5rem;
   justify-content: center;
 }
